--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-protobuf>=3.6.0
+CTkMessagebox==2.7
+customtkinter==5.2.2
+darkdetect==0.8.0
+packaging==24.2
+pillow==11.1.0
+platformdirs==4.3.6
+protobuf==3.20.1
+typing_extensions==4.12.2
