--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,11 @@ jobs:
       with:
         python-version: "3.10.4"
 
+    - name: Upgrade pip
+      run: python -m pip install --upgrade pip
+
     - name: Install Dependencies
-      run: pip install -r requirements.txt pyinstaller
+      run: pip install --no-cache-dir -r requirements.txt pyinstaller
 
     - name: Build Executable
       run: |
