--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         python-version: "3.10.4"
 
+    - name: Force x86_64 architecture on macOS
+      run: echo "ARCHFLAGS=-arch x86_64" >> $GITHUB_ENV
+
     - name: Upgrade pip
       run: python -m pip install --upgrade pip
 
@@ -29,7 +32,7 @@ jobs:
 
     - name: Build Executable
       run: |
-        pyinstaller --onefile --windowed --name "OTA_Extractor" main.py
+        pyinstaller --onefile --windowed --name "OTA_Extractor" main.py --target-arch x86_64
       shell: bash
 
     - name: Upload to GitHub Releases
