--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,23 +16,34 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v3
 
-    - name: Set up Python
+    - name: Set up Python (Windows/Linux)
+      if: runner.os != 'macOS'
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10.4"
+        python-version: "3.10"
 
-    - name: Force x86_64 architecture on macOS
-      run: echo "ARCHFLAGS=-arch x86_64" >> $GITHUB_ENV
+    - name: Set up Python for x86_64 on macOS
+      if: runner.os == 'macOS'
+      run: |
+        sudo softwareupdate --install-rosetta --agree-to-license
+        arch -x86_64 /usr/local/bin/python3 -m pip install --no-cache-dir --upgrade pip setuptools wheel
 
     - name: Upgrade pip
+      if: runner.os != 'macOS'
       run: python -m pip install --upgrade pip
 
-    - name: Install Dependencies
+    - name: Install Dependencies (Windows/Linux)
+      if: runner.os != 'macOS'
       run: pip install --no-cache-dir -r requirements.txt pyinstaller
+
+    - name: Install Dependencies (macOS x86_64)
+      if: runner.os == 'macOS'
+      run: |
+        arch -x86_64 python3 -m pip install --no-cache-dir -r requirements.txt pyinstaller
 
     - name: Build Executable
       run: |
-        pyinstaller --onefile --windowed --name "OTA_Extractor" main.py --target-arch x86_64
+        pyinstaller --onefile --windowed --name "OTA_Extractor" main.py
       shell: bash
 
     - name: Upload to GitHub Releases
