--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,50 +10,22 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-13, windows-latest]  # Используем macOS Intel!
 
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
 
-    - name: Set up Python (Windows/Linux)
-      if: runner.os != 'macOS'
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
-
-    - name: Install Rosetta 2 (macOS)
-      if: runner.os == 'macOS'
-      run: |
-        sudo softwareupdate --install-rosetta --agree-to-license
-
-    - name: Install Homebrew (x86_64)
-      if: runner.os == 'macOS'
-      run: |
-        arch -x86_64 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-
-    - name: Use x86_64 Homebrew
-      if: runner.os == 'macOS'
-      run: |
-        echo "eval \"$(/usr/local/bin/brew shellenv)\"" >> $GITHUB_ENV
-
-    - name: Install Python x86_64
-      if: runner.os == 'macOS'
-      run: |
-        arch -x86_64 brew install python@3.10
+        python-version: "3.10.4"
 
     - name: Upgrade pip
-      if: runner.os != 'macOS'
       run: python -m pip install --upgrade pip
 
-    - name: Install Dependencies (Windows/Linux)
-      if: runner.os != 'macOS'
+    - name: Install Dependencies
       run: pip install --no-cache-dir -r requirements.txt pyinstaller
-
-    - name: Install Dependencies (macOS x86_64)
-      if: runner.os == 'macOS'
-      run: |
-        arch -x86_64 python3 -m pip install --no-cache-dir -r requirements.txt pyinstaller
 
     - name: Build Executable
       run: |
