--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-13, windows-latest]  # Используем macOS Intel!
+        os: [ubuntu-latest, macos-13, windows-latest]
 
     steps:
     - name: Checkout Repository
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10.4"
+        python-version: "3.10"
 
     - name: Upgrade pip
       run: python -m pip install --upgrade pip
@@ -27,14 +27,24 @@ jobs:
     - name: Install Dependencies
       run: pip install --no-cache-dir -r requirements.txt pyinstaller
 
-    - name: Build Executable
+    - name: Build Executable (Linux & Windows)
+      if: runner.os != 'macOS'
       run: |
-        pyinstaller --onefile --windowed --name "OTA_Extractor" main.py
+        OS_NAME=$(echo "${{ runner.os }}" | tr '[:upper:]' '[:lower:]')
+        pyinstaller --onefile --windowed --name "OTA_Extractor_${OS_NAME}" main.py
+      shell: bash
+
+    - name: Build Executable (macOS .app)
+      if: runner.os == 'macOS'
+      run: |
+        pyinstaller --onefile --windowed --name "OTA_Extractor" --osx-bundle-identifier "com.example.OTAExtractor" main.py
       shell: bash
 
     - name: Upload to GitHub Releases
       uses: softprops/action-gh-release@v1
       with:
-        files: dist/*
+        files: |
+          dist/OTA_Extractor_*
+          dist/OTA_Extractor.app
       env:
         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
